[chore] Fix deprecated use of Java API
(cherry picked from commit f5e390cc9a5d47b06fa87572f6b973d0c2c918d6)